Wrong motion blur with RBDs (wrong subframe interpolation?) #93520

Closed
opened 2021-11-30 18:25:52 +01:00 by Steffen Dünner · 9 comments

System Information
Operating system: Linux-5.11.0-41-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.29.05

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-30 16:37, hash: 88b37b639e
Worked: (newest version of Blender that worked as expected)

Short description of error
I noticed that (even cached) RBD objects show wrong motion blur in a scene with a camera moving along with them.
I attached a simple scene with 3 falling cubes, from left to right:
Cube 1 is a cached RBD simulation, cube 2 is a cube thats transformation is constrained to cube 1 and cube 3 is a cube that was originally constrained to cube 1 as well but then has been baked to keyframes.
These 3 cubes are being shot from a camera that's falling at a similar speed as themselves and therefore there should be almost no motion blur on the cubes while falling.

Exact steps for others to reproduce the error

  • Open the attached blend file:
    RBD_Jitter_v03.blend
  • Go to a frame where the 3 falling cubes have roughly the same downward speed as the camera (e.g. frame 16)
  • It looks like this:
    RBD_Jitter_v03.png
  • Only the rightmost cube shows the correct (i.e. nearly no) motion blur. The two cubes on the left are blurred like they were not falling and only the camera motion blur was applied.

Here's a quickly rendered animation of it:
RBD_Jitter.0001-0140.mp4

**System Information** Operating system: Linux-5.11.0-41-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.29.05 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-30 16:37, hash: `88b37b639e` Worked: (newest version of Blender that worked as expected) **Short description of error** I noticed that (even cached) RBD objects show wrong motion blur in a scene with a camera moving along with them. I attached a simple scene with 3 falling cubes, from left to right: Cube 1 is a cached RBD simulation, cube 2 is a cube thats transformation is constrained to cube 1 and cube 3 is a cube that was originally constrained to cube 1 as well but then has been baked to keyframes. These 3 cubes are being shot from a camera that's falling at a similar speed as themselves and therefore there should be almost no motion blur on the cubes while falling. **Exact steps for others to reproduce the error** - Open the attached blend file: [RBD_Jitter_v03.blend](https://archive.blender.org/developer/F12669533/RBD_Jitter_v03.blend) - Go to a frame where the 3 falling cubes have roughly the same downward speed as the camera (e.g. frame 16) - It looks like this: ![RBD_Jitter_v03.png](https://archive.blender.org/developer/F12669535/RBD_Jitter_v03.png) - Only the rightmost cube shows the correct (i.e. nearly no) motion blur. The two cubes on the left are blurred like they were not falling and only the camera motion blur was applied. Here's a quickly rendered animation of it: [RBD_Jitter.0001-0140.mp4](https://archive.blender.org/developer/F12669549/RBD_Jitter.0001-0140.mp4)

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Small addition. Here's a viewport render (with subsamples) of the 3 cubes above. You can clearly see that only the rightmost cube falls smoothly. The two on the left (RBD cache and constrained) always accelerate / decelerate during a frame.
RBD_Jitter.0001-0180.mp4

Small addition. Here's a viewport render (with subsamples) of the 3 cubes above. You can clearly see that only the rightmost cube falls smoothly. The two on the left (RBD cache and constrained) always accelerate / decelerate during a frame. [RBD_Jitter.0001-0180.mp4](https://archive.blender.org/developer/F12672690/RBD_Jitter.0001-0180.mp4)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, thx investigating.
Can also imagine that the (supposedly wrong?) subframe interpolation results in the misbehavior.

Can confirm, thx investigating. Can also imagine that the (supposedly wrong?) subframe interpolation results in the misbehavior.
Philipp Oeser changed title from Wrong motion blur with RBDs to Wrong motion blur with RBDs (wrong subframe interpolation?) 2022-01-20 08:50:18 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

With bpy.context.scene.show_subframe = True we can see the same non-smooth motion in the viewport, so the problem is in the rigid body implementation.

With `bpy.context.scene.show_subframe = True` we can see the same non-smooth motion in the viewport, so the problem is in the rigid body implementation.

This issue was referenced by e1ae95f6b2

This issue was referenced by e1ae95f6b2a3106c008e94b11cda9ba3e6d59ae3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-01-20 20:41:34 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93520
No description provided.