Fix T93520: wrong subframe motion blur with rigid body physics

The code here was using velocity based interpolation copied from particles.
However there is no velocity cached in the rigid body point cache so the
results were non-sensical.